tests/ui/discord-frontend/entity_macro/expected_literal_10.stderr
error: expected string literal
  --> tests/ui/discord-frontend/entity_macro/expected_literal_10.rs:39:18
   |
LL |     overrides = [core],
   |                  ^^^^

error: aborting due to 1 previous error

